tests/golden/defaults/defaults/defaults/10_helmchart/nextcloud/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: nextcloud
    helm.sh/chart: nextcloud-6.1.0
  name: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/name: nextcloud
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        hooks-hash: 9525c2748a6c7cd0e28ec740623d0b3fa5a75c83b51ccfd136bc89c76737b204
        nextcloud-config-hash: 7d1514661bbed0f4ae4dd259f67b168d24f76788138bf25fa2f2753b09db94f2
        nginx-config-hash: 18dd8f905a93ed27f032e9ae68084222ed7e5926f7144cda17b979780f4da54b
        php-config-hash: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/instance: nextcloud
        app.kubernetes.io/name: nextcloud
    spec:
      containers:
        - env:
            - name: POSTGRES_HOST
              value: postgresql
            - name: POSTGRES_DB
              value: nextcloud
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  key: postgres-username
                  name: nextcloud
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: postgres-password
                  name: nextcloud
            - name: NEXTCLOUD_ADMIN_USER
              valueFrom:
                secretKeyRef:
                  key: nextcloud-username
                  name: nextcloud
            - name: NEXTCLOUD_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: nextcloud-password
                  name: nextcloud
            - name: NEXTCLOUD_TRUSTED_DOMAINS
              value: nextcloud.local
            - name: NEXTCLOUD_DATA_DIR
              value: /var/www/html/data
            - name: REDIS_HOST
              value: redis-master
            - name: REDIS_HOST_PORT
              value: '6379'
            - name: REDIS_HOST_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: redis-password
                  name: nextcloud
          image: nextcloud:30.0.0-fpm-alpine
          imagePullPolicy: IfNotPresent
          name: nextcloud
          resources:
            limits:
              cpu: 4
              memory: 8Gi
            requests:
              cpu: 500m
              memory: 3Gi
          volumeMounts:
            - mountPath: /var/www/
              name: nextcloud-main
              subPath: root
            - mountPath: /var/www/html
              name: nextcloud-main
              subPath: html
            - mountPath: /var/www/html/data
              name: nextcloud-main
              subPath: data
            - mountPath: /var/www/html/config
              name: nextcloud-main
              subPath: config
            - mountPath: /var/www/html/custom_apps
              name: nextcloud-main
              subPath: custom_apps
            - mountPath: /var/www/tmp
              name: nextcloud-main
              subPath: tmp
            - mountPath: /var/www/html/themes
              name: nextcloud-main
              subPath: themes
            - mountPath: /var/www/html/config/language.config.php
              name: nextcloud-config
              subPath: language.config.php
            - mountPath: /var/www/html/config/proxy.config.php
              name: nextcloud-config
              subPath: proxy.config.php
            - mountPath: /var/www/html/config/.htaccess
              name: nextcloud-config
              subPath: .htaccess
            - mountPath: /var/www/html/config/apache-pretty-urls.config.php
              name: nextcloud-config
              subPath: apache-pretty-urls.config.php
            - mountPath: /var/www/html/config/apcu.config.php
              name: nextcloud-config
              subPath: apcu.config.php
            - mountPath: /var/www/html/config/apps.config.php
              name: nextcloud-config
              subPath: apps.config.php
            - mountPath: /var/www/html/config/autoconfig.php
              name: nextcloud-config
              subPath: autoconfig.php
            - mountPath: /var/www/html/config/redis.config.php
              name: nextcloud-config
              subPath: redis.config.php
            - mountPath: /var/www/html/config/reverse-proxy.config.php
              name: nextcloud-config
              subPath: reverse-proxy.config.php
            - mountPath: /var/www/html/config/s3.config.php
              name: nextcloud-config
              subPath: s3.config.php
            - mountPath: /var/www/html/config/smtp.config.php
              name: nextcloud-config
              subPath: smtp.config.php
            - mountPath: /var/www/html/config/swift.config.php
              name: nextcloud-config
              subPath: swift.config.php
            - mountPath: /var/www/html/config/upgrade-disable-web.config.php
              name: nextcloud-config
              subPath: upgrade-disable-web.config.php
        - image: nginx:alpine
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: nextcloud.local
              path: /status.php
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          name: nextcloud-nginx
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              httpHeaders:
                - name: Host
                  value: nextcloud.local
              path: /status.php
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 50m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 16Mi
          volumeMounts:
            - mountPath: /var/www/
              name: nextcloud-main
              subPath: root
            - mountPath: /var/www/html
              name: nextcloud-main
              subPath: html
            - mountPath: /var/www/html/data
              name: nextcloud-main
              subPath: data
            - mountPath: /var/www/html/config
              name: nextcloud-main
              subPath: config
            - mountPath: /var/www/html/custom_apps
              name: nextcloud-main
              subPath: custom_apps
            - mountPath: /var/www/tmp
              name: nextcloud-main
              subPath: tmp
            - mountPath: /var/www/html/themes
              name: nextcloud-main
              subPath: themes
            - mountPath: /etc/nginx/conf.d/
              name: nextcloud-nginx-config
        - command:
            - /cron.sh
          env:
            - name: POSTGRES_HOST
              value: postgresql
            - name: POSTGRES_DB
              value: nextcloud
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  key: postgres-username
                  name: nextcloud
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: postgres-password
                  name: nextcloud
            - name: NEXTCLOUD_ADMIN_USER
              valueFrom:
                secretKeyRef:
                  key: nextcloud-username
                  name: nextcloud
            - name: NEXTCLOUD_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: nextcloud-password
                  name: nextcloud
            - name: NEXTCLOUD_TRUSTED_DOMAINS
              value: nextcloud.local
            - name: NEXTCLOUD_DATA_DIR
              value: /var/www/html/data
            - name: REDIS_HOST
              value: redis-master
            - name: REDIS_HOST_PORT
              value: '6379'
            - name: REDIS_HOST_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: redis-password
                  name: nextcloud
          image: nextcloud:30.0.0-fpm-alpine
          imagePullPolicy: IfNotPresent
          name: nextcloud-cron
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 150m
              memory: 256Mi
          volumeMounts:
            - mountPath: /var/www/
              name: nextcloud-main
              subPath: root
            - mountPath: /var/www/html
              name: nextcloud-main
              subPath: html
            - mountPath: /var/www/html/data
              name: nextcloud-main
              subPath: data
            - mountPath: /var/www/html/config
              name: nextcloud-main
              subPath: config
            - mountPath: /var/www/html/custom_apps
              name: nextcloud-main
              subPath: custom_apps
            - mountPath: /var/www/tmp
              name: nextcloud-main
              subPath: tmp
            - mountPath: /var/www/html/themes
              name: nextcloud-main
              subPath: themes
            - mountPath: /var/www/html/config/language.config.php
              name: nextcloud-config
              subPath: language.config.php
            - mountPath: /var/www/html/config/proxy.config.php
              name: nextcloud-config
              subPath: proxy.config.php
            - mountPath: /var/www/html/config/.htaccess
              name: nextcloud-config
              subPath: .htaccess
            - mountPath: /var/www/html/config/apache-pretty-urls.config.php
              name: nextcloud-config
              subPath: apache-pretty-urls.config.php
            - mountPath: /var/www/html/config/apcu.config.php
              name: nextcloud-config
              subPath: apcu.config.php
            - mountPath: /var/www/html/config/apps.config.php
              name: nextcloud-config
              subPath: apps.config.php
            - mountPath: /var/www/html/config/autoconfig.php
              name: nextcloud-config
              subPath: autoconfig.php
            - mountPath: /var/www/html/config/redis.config.php
              name: nextcloud-config
              subPath: redis.config.php
            - mountPath: /var/www/html/config/reverse-proxy.config.php
              name: nextcloud-config
              subPath: reverse-proxy.config.php
            - mountPath: /var/www/html/config/s3.config.php
              name: nextcloud-config
              subPath: s3.config.php
            - mountPath: /var/www/html/config/smtp.config.php
              name: nextcloud-config
              subPath: smtp.config.php
            - mountPath: /var/www/html/config/swift.config.php
              name: nextcloud-config
              subPath: swift.config.php
            - mountPath: /var/www/html/config/upgrade-disable-web.config.php
              name: nextcloud-config
              subPath: upgrade-disable-web.config.php
      securityContext:
        fsGroup: 82
      volumes:
        - name: nextcloud-main
          persistentVolumeClaim:
            claimName: nextcloud-nextcloud
        - configMap:
            name: nextcloud-config
          name: nextcloud-config
        - configMap:
            name: nextcloud-nginxconfig
          name: nextcloud-nginx-config
